<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_seen"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/already_seen"/>
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/search_by_genre" />
        <item
            android:id="@+id/nav_dist_all"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/search_by_user" />
        <item
            android:id="@+id/nav_tchebychev"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/search_by_distance_one" />
        <item
            android:id="@+id/nav_cosinus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/search_by_distance_two" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
